tests/testfiles/passing/invalid_identifiers/keyword_as_id_else.c
/* Keyword as identifier: else */
int main() {
    int else;
}